--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -17,8 +17,9 @@
 
    The \textsl{Sequencer64 Pattern Editor} is used to edit and preview a
    pattern, as well as to configure its buss and channel settings.
-   In programmer's jargon, this window is represented by the seqroll class (and
-   the other "seq" classes).
+
+%  In programmer's jargon, this window is represented by the seqroll class (and
+%  the other "seq" classes).
 
 \begin{figure}[H]
    \centering 
@@ -41,12 +42,12 @@
       \item \textbf{Common Actions}
    \end{enumber}
 
-   Before we describe this window, there are some peculiarities to recognize.
+   Before we describe this window, there are some things to recognize.
    First, if the pattern is empty when play is started, the progress bar will
-   not move.  It moves only if there are events to play in the pattern.
+   still move.  This is necessary to help the user key in a new pattern.
    Second, to add a note, one must press the right mouse button (the pointer
-   changes to a pencil) and, while holding it, press the left mouse button.  Or
-   click in the pattern editor, press
+   changes to a pencil) and, while holding it, press the left mouse button.
+   Or, to use a keystroke, click in the pattern editor, press
    \index{keys!p}
    \texttt{p} to select the "pencil" or "paint" mode, then
    \index{mouse!left-click-drag}
