Added description of optional LFO support for 0.9.20.

--- a/tex/seq64_kbd_mouse.tex
+++ b/tex/seq64_kbd_mouse.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-04-07
-% \update      2016-10-29
+% \update      2016-10-31
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -263,6 +263,8 @@
    Here are the keystrokes handle by the main frame of the window:
 
    \begin{itemize}
+      \item \texttt{Ctrl-L}.  Bring up the LFO event modulation editor, if
+         built into this version (0.9.20 and above) of \textsl{Sequencer64}.
       \item \texttt{Ctrl-W}.  Exit the sequence (pattern) editor.
       \item \texttt{Ctrl-Page Up}.  Zoom in.
       \item \texttt{Ctrl-Page Down}.  Zoom out.
@@ -391,7 +393,9 @@
 \subsubsection{Pattern Editor Data Panel}
 \label{subsubsec:kbd_mouse_pattern_editor_data_panel}
 
-   TO BE DETERMINED.
+   Currently, no keystroke support is provided in the data panel.
+   One potential upgrade would be the ability to change the value of the event
+   with the Up and Down arrow keys.
 
 \subsubsection{Pattern Editor Virtual Keyboard}
 \label{subsubsec:kbd_mouse_pattern_editor_virtual_keyboard}
